@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-08-27T08:16:47Z",
-  "count_outdated" : 954,
-  "uniques_outdated" : 600,
+  "timestamp" : "2023-08-27T16:17:15Z",
+  "count_outdated" : 956,
+  "uniques_outdated" : 601,
   "count" : 973,
   "uniques" : 614,
   "clones" : [
-    {
-      "timestamp": "2023-08-13T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-08-14T00:00:00Z",
       "count": 2,
