@@ -1,3 +1,12 @@
+2023-08-27T16:17:15Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5991979219 # 1121
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-27
+* notice: last 14d: unq all: 4 17
+* notice: prev accum: outdated-unq outdated-all / unq all: 600 954 / 614 973
+* notice: next accum: outdated-unq outdated-all / unq all: 601 956 / 614 973
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-08-13] / []
+
 2023-08-27T08:16:47Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5989799595 # 1120
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-27
